fix spacing issues on inputs

--- a/client/src/css/People.css
+++ b/client/src/css/People.css
@@ -41,6 +41,7 @@
 .AddNewRelatedPersonListItem {
   .VisavInput {
     flex: 1 0 auto;
+    margin-right: 20px;
   }
   border: none;
 }
