--- a/client/src/css/inputs.css
+++ b/client/src/css/inputs.css
@@ -9,7 +9,7 @@
   background: $lightest-grey;
   box-sizing: border-box;
   padding: 0 10px;
-
+  height: 50px;
   label {
     display: block;
     font-size: 60%;
